# hackclaw

./: CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  vercel.json
docs/: architecture.md  installing.md
examples/: hacklayer41_run.md
landing/: README.md  index.html  style.css  vercel.json
plugin/hackclaw/: __init__.py  plugin.yaml
plugin/hackclaw/tools/: _runtime.py  hackclaw_create_draft.py  hackclaw_get_brief.py  hackclaw_list_submissions.py  hackclaw_select_platform.py  hackclaw_submit.py  hackclaw_update_project.py
skills/hackclaw/designer/: SKILL.md
skills/hackclaw/dev/: SKILL.md
skills/hackclaw/pm/: SKILL.md
skills/hackclaw/squad/: SKILL.md
skills/hackclaw/squad/references/: flow.md
skills/hackclaw/storyteller/: SKILL.md
skills/hackclaw/strategist/: SKILL.md
skills/hackclaw/submitter/: SKILL.md
tests/: test_platforms.py  test_plugin_registration.py
