[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackclaw"
version = "0.2.0"
description = "AI squads that claw their way to hackathon wins. A Hermes Agent plugin pack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mario Alves", email = "mario@layerx.xyz" }]
keywords = ["hermes-agent", "ai", "agents", "hackathon", "mcp", "mistral", "devstral"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

# HackClaw is a Hermes plugin. The Hermes runtime provides the agent loop,
# the LLM client, the messaging gateways, and the MCP integration. This
# package only ships the platform adapters and tool wrappers.
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/hypermario/hackclaw"
Repository = "https://github.com/hypermario/hackclaw"
Issues = "https://github.com/hypermario/hackclaw/issues"

[tool.hatch.build.targets.wheel]
# The plugin source ships under plugin/hackclaw/. The skill pack ships under
# skills/hackclaw/ and is installed via install.sh into ~/.hermes/skills/.
packages = ["plugin/hackclaw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
